# fetal-head-clinical-ai

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  phase0_model.pth  phase2_model.pth  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: api.yml  ci.yml  integration.yml  sync-hf-space.yml
.streamlit/: config.toml  style.css
app/: README.md  __init__.py  app.py  inference.py  model_card.py  report.py  xai.py
app/api/: __init__.py  demo_seed.py  deps.py  dicom_sr_generator.py  fhir_generator.py  findings_store.py  inference_wrapper.py  main.py  model_manager.py  reports_db.py  reports_endpoints.py  schemas.py  xai_endpoints.py
data/: README.md
models/: README.md
notebooks/: README.md  fetal_head_phase0_baseline.ipynb  fetal_head_phase1_lddm_v2.ipynb  fetal_head_phase2_temporal_attention.ipynb  fetal_head_phase3_v2.ipynb  fetal_head_phase4a.ipynb  fetal_head_phase4b.ipynb
results/: README.md
src/: evaluate.py
src/data/: __init__.py  dataset.py  pseudo_lddm_v2.py
src/models/: __init__.py  pruned_unet.py  residual_unet.py  temporal_net.py
tests/: conftest.py  test_api_auth.py  test_api_cors.py  test_api_demo.py  test_api_export.py  test_api_health.py  test_api_infer_mock.py  test_api_reports.py  test_api_xai.py  test_ci_smoke.py  test_model_manager_unit.py  test_shapes.py
tests/integration/: __init__.py
