[project]
name = "fetal-head-clinical-ai"
version = "1.0.0"
description = "Automated fetal head circumference measurement from ultrasound using pruned residual U-Nets with temporal attention"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tarun Sadarla", email = "tarunsadarla26@gmail.com" }]
requires-python = ">=3.11"
keywords = [
    "medical-imaging", "ultrasound", "fetal", "segmentation",
    "pytorch", "unet", "model-pruning", "gestational-age"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "app"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that load model weights or run inference (deselect with -m 'not slow')",
    "integration: marks tests that require a running FastAPI server",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests
